Test and style fixes